Use @link-color rather than @midnight-blue for A elements

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -290,7 +290,7 @@
     [data-ko-block=tripleArticleBlock] .links-color a:link,
     [data-ko-block=tripleArticleBlock] .links-color a:visited,
     [data-ko-block=tripleArticleBlock] .links-color a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -300,7 +300,7 @@
     [data-ko-block=doubleArticleBlock] .links-color a:link,
     [data-ko-block=doubleArticleBlock] .links-color a:visited,
     [data-ko-block=doubleArticleBlock] .links-color a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -310,7 +310,7 @@
     [data-ko-block=singleArticleBlock] .links-color a:link,
     [data-ko-block=singleArticleBlock] .links-color a:visited,
     [data-ko-block=singleArticleBlock] .links-color a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -320,7 +320,7 @@
     [data-ko-block=textBlock] .links-color a:link,
     [data-ko-block=textBlock] .links-color a:visited,
     [data-ko-block=textBlock] .links-color a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -330,7 +330,7 @@
     [data-ko-block=sideArticleBlock] .links-color a:link,
     [data-ko-block=sideArticleBlock] .links-color a:visited,
     [data-ko-block=sideArticleBlock] .links-color a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -360,7 +360,7 @@
     [data-ko-block=doubleImageBlock] a:link,
     [data-ko-block=doubleImageBlock] a:visited,
     [data-ko-block=doubleImageBlock] a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -368,7 +368,7 @@
     [data-ko-block=tripleImageBlock] a:link,
     [data-ko-block=tripleImageBlock] a:visited,
     [data-ko-block=tripleImageBlock] a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
@@ -376,7 +376,7 @@
     [data-ko-block=imageBlock] a:link,
     [data-ko-block=imageBlock] a:visited,
     [data-ko-block=imageBlock] a:hover {
-      color: #02426f;
+      color: #495365;
       -ko-color: @longTextStyle.linksColor;
       text-decoration: underline;
     }
