In the CiviMail block (at the bottom) use @slate-80 for the text colour, and @slate for the A elements

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1422,19 +1422,19 @@
             <td valign="top" bgcolor="#ffffff" style="background-color: #ffffff;" align="center">
               <table width="100%" cellspacing="0" cellpadding="0" border="0" style="width:100%;">
                 <tr>
-                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #8793a7;" class="long-text links-color">
                      &ensp;<br/>
                      &ensp;<br/>
                   </td>
                 </tr>
                 <tr>
-                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #8793a7;" class="long-text links-color">
                      This email was sent to: {contact.display_name}<br/>
                      <br/>
-                     <a href="{action.unsubscribeUrl}">Stop</a> receiving emails on this topic<br/>
-                     or <a href="{action.optOutUrl}">never receive</a> bulk emails from us again
+                     <a href="{action.unsubscribeUrl}" style="color: #697891;">Stop</a> receiving emails on this topic<br/>
+                     or <a href="{action.optOutUrl}"  style="color: #697891;">never receive</a> bulk emails from us again
                   </td>
-                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #919191;" class="long-text links-color">
+                  <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #8793a7;" class="long-text links-color">
                     Head office:<br/>
                     {domain.address}
                   </td>
