Format titles according to the cbf2019 theme

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -511,8 +511,8 @@
 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="368" style="width: 100%; -ko-attr-width: @[570 - 2 * 18 - Math.round(imageWidth)]" align="left">
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                          <span style="color: #02426f" data-ko-editable="titleText">
+                        <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                          <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="titleText">
                           Title
                           </span>
                         </td>
@@ -596,8 +596,8 @@
           </tr>
           <tr><td><table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr data-ko-display="titleVisible">
-              <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                <span style="color: #02426f;" data-ko-editable="text">
+              <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="text">
                Section Title
                 </span>
               </td>
@@ -649,12 +649,12 @@
 
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
         <div class="oldwebkit">
-        <table width="570" border="0" cellpadding="0" cellspacing="9" class="vb-container halfpad" bgcolor="#1e9dd8"
-          style="width: 100%; max-width: 570px; background-color: #1e9dd8;">
+        <table width="570" border="0" cellpadding="0" cellspacing="9" class="vb-container halfpad" bgcolor="#1c9cd6"
+          style="width: 100%; max-width: 570px; background-color: #1c9cd6;">
           <tr>
-            <td bgcolor="#1e9dd8" align="center"
-              style="background-color: #1e9dd8; font-size: 22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff; text-align: left;
-              font-weight: bold;
+            <td bgcolor="#1c9cd6" align="center"
+              style="background-color: #1c9cd6; font-size: 22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff; text-align: left;
+              font-weight: normal; text-transform: uppercase; letter-spacing: 4px;
               -ko-attr-align: @bigTitleStyle.align;
               -ko-color: @bigTitleStyle.color;">
               <span data-ko-editable="text">Section Title</span>
@@ -724,8 +724,9 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                          <span style="color: #02426f;" data-ko-editable="leftTitleText">Title
+                        <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                          <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="leftTitleText">
+                          Title
                           </span>
                         </td>
                       </tr>
@@ -770,9 +771,9 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                          <span style="color: #02426f;"  data-ko-editable="middleTitleText">
-                         Title
+                        <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                          <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="middleTitleText">
+                          Title
                           </span>
                         </td>
                       </tr>
@@ -817,9 +818,9 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                          <span style="color: #02426f;" data-ko-editable="rightTitleText">
-                         Title
+                        <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                          <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="rightTitleText">
+                          Title
                           </span>
                         </td>
                       </tr>
@@ -892,8 +893,8 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                          <span style="color: #02426f;" data-ko-editable="leftTitleText">
+                        <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                          <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="leftTitleText">
                           Title
                           </span>
                         </td>
@@ -939,9 +940,9 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-weight: bold; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #02426f; text-align:left;">
-                          <span style="color: #02426f;" data-ko-editable="rightTitleText">
-                         Title
+                        <td style="font-weight: normal; font-size: 18px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #1c9cd6; text-align:left;">
+                          <span style="color: #1c9cd6; text-transform: uppercase; letter-spacing: 4px;" data-ko-editable="rightTitleText">
+                          Title
                           </span>
                         </td>
                       </tr>
