Replace the social icons and format them

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -208,7 +208,8 @@
       display: inline-block;
       vertical-align: top;
       padding-bottom: 0px;
-      border-radius: 100%;
+      margin-top: 22px;
+      margin-left: 10px;
     }
     .oldwebkit { max-width: 570px; }
     td.vb-outer { padding-left: 9px; padding-right: 9px; }
