--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -417,7 +417,7 @@
                         <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px; padding-bottom: 22px;
                           font-family: Calibri, Arial, Helvetica, sans-serif; color: #ffffff;
                           -ko-color: @linkStyle.color">
-                          <a href="http://citybibleforum.org"><img src="/sites/all/themes/cbf2019/logo-email.png" alt="City Bible Forum" border="0" /></a>
+                          <a href="https://citybibleforum.org"><img src="/sites/all/themes/cbf2019/logo-email.png" alt="City Bible Forum" border="0" /></a>
                         </td>
                       </tr>
                     </table>
@@ -1336,7 +1336,7 @@
                           style="font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #989898; text-align:left;"
                           data-ko-editable="longText" class="long-text links-color mobile-textcenter">
                           <p>
-                            <a href="http://citybibleforum.org">
+                            <a href="https://citybibleforum.org">
                               <img src="/sites/all/themes/cbf2019/logo-white-email.png" alt="City Bible Forum" border="0" />
                             </a>
                           </p>
