--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1437,7 +1437,7 @@
                      or <a href="{action.optOutUrl}"  style="color: #697891;">never receive</a> bulk emails from us again
                   </td>
                   <td align="left" valign="top" style="text-align: left; font-size: 14px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #8793a7;" class="long-text links-color">
-                    Head office:<br/>
+                    National office:<br/>
                     {domain.address}
                   </td>
                 </tr>
