Attempt 2 to fix button block which has no link inserted

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1040,9 +1040,8 @@
                     -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
                     -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-color: @bigButtonStyle.color; ">
-                    <a href="" style="text-decoration: none; color: #151515; font-weight: normal;
-                      padding: 8px 37px; border: 2px solid #151515; letter-spacing: 2px;
-                      -ko-color: @bigButtonStyle.color;">Button</a>
+                    <a href="" style="text-decoration: none; color: #151515; font-weight: normal; padding: 8px 37px; border: 2px solid #151515; letter-spacing: 2px;">
+                      Button</a>
                   </td>
                 </tr>
               </table>
