Attempt 3 to fix button block which has no link inserted

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1035,11 +1035,7 @@
               <table cellpadding="0" border="0" align="center" cellspacing="0" class="mobile-full">
                 <tr>
                   <td width="auto" valign="middle" bgcolor="#ffffff" align="center" height="50"
-                    style="font-size:22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #151515; font-weight: normal;
-                    background-color: #ffffff; border-radius: 2px; text-transform: uppercase;
-                    -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
-                    -ko-border-radius: @[bigButtonStyle.radius]px;
-                    -ko-color: @bigButtonStyle.color; ">
+                    style="font-size:22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #151515; font-weight: normal; background-color: #ffffff; border-radius: 2px; text-transform: uppercase;">
                     <a href="" style="text-decoration: none; color: #151515; font-weight: normal; padding: 8px 37px; border: 2px solid #151515; letter-spacing: 2px;">
                       Button</a>
                   </td>
