Attempt 4 to fix button block which has no link inserted

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1036,8 +1036,7 @@
                 <tr>
                   <td width="auto" valign="middle" bgcolor="#ffffff" align="center" height="50"
                     style="font-size:22px; font-family: Calibri, Arial, Helvetica, sans-serif; color: #151515; font-weight: normal; background-color: #ffffff; border-radius: 2px; text-transform: uppercase;">
-                    <a href="" style="text-decoration: none; color: #151515; font-weight: normal; padding: 8px 37px; border: 2px solid #151515; letter-spacing: 2px;">
-                      Button</a>
+                    <a href="" style="text-decoration: none; color: #151515; font-weight: normal; padding: 8px 37px; border: 2px solid #151515; letter-spacing: 2px;">Big Button</a>
                   </td>
                 </tr>
               </table>
